Some very nice changes

--- a/src/pages/blog/template.mdx
+++ b/src/pages/blog/template.mdx
@@ -1,17 +1,18 @@
 ---
 layout: ../../layouts/BlogPostLayout.astro
 
-
 title: TITLE HERE
 date: 2000-01-01
 author: Adam B
-image: {
-  src: "/assets/images/post-1.jpg",
-  alt: "A picture of a coder",
-}
+image:
+  {
+    src: "/assets/images/posts/hq-background.png",
+    alt: "Template background image",
+  }
 description: Here's a template for a post, it's wonderful
 draft: true
-category: Template
+category: Personal
 ---
-import Link from '../../components/Link.astro'
+
+import Link from "../../components/Link.astro";
 import { Image, Picture } from "@astrojs/image/components";
