--- a/src/pages/blog/rsa-proj.mdx
+++ b/src/pages/blog/rsa-proj.mdx
@@ -1,26 +1,73 @@
 ---
 layout: ../../layouts/BlogPostLayout.astro
-title: Some other post, equally as important
+
+
+title: RSA Project - Home Sweet Home
 date: 2019-05-22
 author: Adam B
 image: {
   src: "/assets/images/posts/rsa-proj/proj-rsa-coldperson.jpg",
   alt: "A picture of cold person",
 }
-description: Woah another post with the same image, holy ballz!
+description: How might we harness age friendly design to future-proof homes, so they are sustainable, safe and inclusive places to live and enjoy?
 draft: false
 category: University
 ---
 import Link from '../../components/Link.astro'
 import { Image, Picture } from "@astrojs/image/components";
 
+<p style="text-align: center;"><i><Link href="https://link.lerndmina.dev/cj1gg" text={`Image from Shutterstock "Paramedic rescues an elderly person in distress..."`} /></i></p>
 
-Nisi duis ex aliqua eu officia eiusmod duis magna pariatur. Irure laborum qui aliqua nulla esse cillum laborum aliquip nulla elit. Id id Lorem duis irure cillum culpa. Nulla sint et aliqua velit do. Nulla sit sit proident consectetur enim ullamco aliqua in reprehenderit ullamco officia.
+## Which brief did I choose and why?
+I chose the home sweet home brief. It came with the question “How might we harness age friendly design to future-proof homes, so they are sustainable, safe and inclusive places to live and enjoy?”
 
-Ad ipsum velit sint enim exercitation mollit consequat elit mollit qui commodo aute. Laboris culpa voluptate aliquip incididunt duis. Cupidatat aliquip et sunt aute fugiat cupidatat irure voluptate. Occaecat officia et sunt.
+This question inspired me to think about something that I had observed. Elderly people always seem to have their heating turned all the way up, or all the way down. If you visit the home of an elderly person, it is either so warm you are sweating buckets or so cold you think you need about three extra layers! The weirdest part about this whole phenomenon is they never seem to notice.
 
-Officia tempor voluptate enim consequat cillum aute fugiat cupidatat incididunt magna labore in commodo. Eiusmod nostrud non deserunt. Incididunt excepteur pariatur magna. Proident aute ad in velit labore enim sit cillum ad mollit proident et qui. Esse sunt ullamco ullamco ipsum enim eu esse id eu exercitation laboris magna Lorem. Anim nostrud officia anim velit do exercitation labore mollit excepteur excepteur ex.
+It turns out that some physical changes in elderly people mean that they often notice heat differently to their younger counterparts in the same environment. They may feel unnervingly comfortable at hotter temperatures and are strangely at ease when you can’t stop shivering. This can be a major problem in the summer months when the temperature can rise so much that elderly people can be put in danger of Hyperthermia
 
-Ipsum adipisicing exercitation dolor pariatur labore qui. Culpa cupidatat ea elit eiusmod tempor ea qui dolor Lorem laborum adipisicing. Ad ea laboris qui cupidatat deserunt culpa. Nulla ex velit adipisicing proident fugiat deserunt sunt eu adipisicing sint incididunt quis qui. Nulla fugiat labore duis ullamco reprehenderit excepteur laboris tempor ullamco aliquip laborum aliqua. Est tempor nisi magna ut elit pariatur commodo.
+I want to stop this. Nobody should be in danger of death in their own home because they can’t sense when it’s getting too hot or too cold. To do this I’m going to design a climate control system to help the elderly in their homes. I want to use machine learning to predict when the occupant requires heat or cooling based on their previous behaviour. The system will also have safety limits to prevent elderly people from overheating or under heating themselves and would notify an emergency contact if safe parameters are exceeded.
 
-Labore commodo do incididunt amet ad et exercitation magna veniam veniam aute laboris excepteur occaecat Lorem. Fugiat in magna commodo magna nulla eu. Fugiat nulla aliqua sunt duis enim irure aliquip fugiat aliqua Lorem ad tempor incididunt proident incididunt. Labore fugiat tempor esse cillum voluptate culpa anim sunt consequat. Ipsum minim nostrud laborum sit aliquip duis officia consequat est. Fugiat mollit elit nulla. Sit minim est elit labore. Sunt eu pariatur pariatur ut deserunt nulla labore in non sit tempor voluptate ex.
+
+## My Design
+Any design I come up with needs to seamlessly integrate into the elderly person’s home. It must not look like an accessibility device, but something you’d want to have around and feel comfortable using. The idea is to have a simple wall unit in the shape of a cartoon style house with two buttons and a screen. This would, at a glance, allow the user to quickly determine the status of the heating in their home, adjusting it when necessary.
+
+![](/assets/images/posts/rsa-proj/proj-rsa-mainuinit1-min.png)
+
+When I was coming up with the idea I had a thought. Not everyone would want or be able to get up and walk over to their master control unit every time they needed to adjust the temperature. I decided to design a small, hand-held remote control. This would perform the same functionality as the master control unit fixed to the wall, allowing the user to indicate their preference in increasing or decreasing temperature and check the current ambient temperature.
+
+![](/assets/images/posts/rsa-proj/proj-rsa-remote1-min.png)
+
+Further into my design I realised I would need to accommodate those with poor vision and so designed the buttons with tactile plus and minus insignia. The device safety feature would mean that the user could push the plus or minus button according to how they felt. If these pushes continued to request an ambient temperature into the “danger zone”, safe settings would be maintained and an outside authority would be notified. The situation could be investigated. The user would not be in a situation of being frustrated with the controller. They would think they were achieving what they felt they needed but help would be on the way.
+
+![](/assets/images/posts/rsa-proj/proj-rsa-remote2buttons-min.png)
+
+Somebody commented on my design for the wall plate that the LCD screen was not large enough. In fact the screen is approximately 10 cm across. Because I wanted a large device to go on the wall so it could be easily spotted the dimensions are bigger than might first be apparent.
+
+![](/assets/images/posts/rsa-proj/proj-rsa-mainuinit2-min.png)
+
+## How did I make the design?
+### Wall Unit Design
+From a cube, in edit mode I subdivided and used the knife tool to create the main house shape. I pulled one top corner over and up to make the peak and then deleted the other corner giving a triangular shape to the roof. I used the knife tool to create the vertices giving me points to make the eaves. Using the knife tool again, I created the outline for the screen and inserted a face. I recessed the face back into the body to make the basic shape of the screen.
+
+I obviously could not leave the house looking like boring white plastic. I navigated to the material editor and chose to give the house a light green colour. I chose green as it is a gender neutral colour. It is neither red nor blue which would represent hot or cold and could clash with the buttons. I avoided choosing a colour like purple which could be considered too "modern". To indicate an LCD I made the screen area black.
+
+To start making the buttons I added a cylinder, inserted a face and extruded to make the shape. I thought a depression in the centre would make it more interesting. I considered using Braille but decided this could be confusing for the elderly not familiar with this communication method. Instead I added tactile plus and minus shapes to the buttons. The buttons were coloured according to heat and cold, red and blue.
+
+![](/assets/images/posts/rsa-proj/proj-rsa-house-edit.png)
+
+### Remote Control Design
+Starting with a UV sphere in edit mode. I turned on x-ray and removed the top half of the sphere. I stretched the half sphere to create an elongated oval-shape. I took inspiration from the Google Chromecast remote. This remote feels very comfortable in the hand, it is well designed ergonomically. Using the knife tool and the loop cut tool, I added geometry along the length of the remote. Rather than selecting the rim and creating one face, I took vertices directly across from each other and created an edge between them. Once I had a grid I was able to select squares in that grid and fill them in. This would allow me later to subdivide the geometry on the face giving me enough space to insert the screen.
+
+![](/assets/images/posts/rsa-proj/proj-rsa-remote-geo.png)
+
+To match the design of the wall unit, I opened the shading workspace and created a green material for the main body. Next, I had to decide where the screen was going to go. I placed it towards the rear middle of the remote. This allowed the buttons to be located towards the front of the remote. When the remote is settled in the palm of the hand the buttons are easily accessible by the thumb. I textured the LCD with the same black material I used on the wall unit. To finish off, I created the buttons by making a cylinder and applying a subdivision surface modifier to it. I used loop cuts to exemplify the angles I wanted to be smooth rather than non-existent, otherwise the modifier would turn it into a spike.
+
+![](/assets/images/posts/rsa-proj/proj-rsa-remote-button.png)
+
+To make the black dot denoting the infrared emitter on the remote control, I selected the geometry that was going to be black and applied the LCD screen material to it. That had the same kind of reflectivity I was looking for.
+
+*Final Render of The Remote*
+![](/assets/images/posts/rsa-proj/remote-final.png)
+
+*Final Wall Unit Render*
+![](/assets/images/posts/rsa-proj/house-final.png)
