--- a/src/content/blog/first-spigot-plugin.mdx
+++ b/src/content/blog/first-spigot-plugin.mdx
@@ -6,6 +6,7 @@ image:
   {
     src: "/assets/images/posts/hq-background.png",
     alt: "A clean background image.",
+    aspect_ratio: { x: 1, y: 0.75 },
   }
 description: Here's a post about me trying to learn spigot by making my first plugin. This is mostly documentation for myself.
 draft: false
