--- a/src/content/blog/rsa-proj.mdx
+++ b/src/content/blog/rsa-proj.mdx
@@ -6,6 +6,7 @@ image:
   {
     src: "/assets/images/posts/rsa-proj/proj-rsa-coldperson.jpg",
     alt: "A picture of cold person",
+    aspect_ratio: { x: 1, y: 0.75 },
   }
 description: How might we harness age friendly design to future-proof homes, so they are sustainable, safe and inclusive places to live and enjoy?
 draft: false
