--- a/src/content/blog/template.mdx
+++ b/src/content/blog/template.mdx
@@ -6,6 +6,7 @@ image:
   {
     src: "/assets/images/posts/hq-background.png",
     alt: "Template background image",
+    aspect_ratio: { x: 1, y: 1 },
   }
 description: Here's a template for a post, it's wonderful
 draft: true
