--- a/src/content/blog/virtual-cities.mdx
+++ b/src/content/blog/virtual-cities.mdx
@@ -6,6 +6,7 @@ image:
   {
     src: "/assets/images/posts/virtual-cities/splash.png",
     alt: "Splash screen",
+    aspect_ratio: { x: 3.5, y: 2 },
   }
 description: Year 2 Semester 1 Group Project. How can we construct a historically accurate representation of Winchester in the Georgian period?
 draft: false
@@ -26,11 +27,10 @@ We split our group so we could all work on separate buildings within the whole p
 </p>
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-brief.png"}
   alt={"Virtual Cities Brief Slide"}
-  width={1200}
   height={600}
+  aspectRatio="4:2"
   format={"avif"}
 />
 
@@ -43,7 +43,6 @@ To get started, the Client provided us with some visual research that they previ
 </p>
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-pintrest.png"}
   alt={"Screenshot of Pintrest"}
   width={1200}
@@ -68,7 +67,6 @@ The ultimate aim is to use AR (augmented reality) so that users of the product c
 </p>
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={
     "/assets/images/posts/virtual-cities/proj-virtual-cities-where-fit-in.png"
   }
@@ -89,7 +87,6 @@ I was now able to start recreating the model. This wasn't as easy as I hoped. Du
 To make the initial 3D superstructure, I started with a cylinder and using loop cuts in edit mode, I matched it to the outline of the kettle in my reference imagery. After creating the basic outline, I decided to work next on the spout. I sub-divided the face of the kettle to create some area to work with. To make the spout, I extruded material out from the body, rotating and scaling it as necessary to match the reference imagery. This was more challenging than I originally thought, I had to keep in mind to turn on blender's X-Ray mode, to allow me to select vertices I could not directly see. A few times during this process I forgot to do this, and ended up with a half spout.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-kettle1.png"}
   alt={"[Kettle Smooth"}
   width={1200}
@@ -100,7 +97,6 @@ To make the initial 3D superstructure, I started with a cylinder and using loop 
 Because the final product was going to be displayed in an AR environment, the spout needed to have a hollow tip. This would provide more realism if the user inspected the model closely. To make the tip, I had to subdivide the end of the spout enough to give me some geometry that I could use to extrude inside of the spout itself. I could then bend the interior of the spout enough, to create the illusion that the hole extended the entire length of the spout. I used this method so I wasn't wasting compute power to render something that would not be seen.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={
     "/assets/images/posts/virtual-cities/proj-virtual-cities-kettle3-spout.png"
   }
@@ -121,7 +117,6 @@ In the reference imagery, the top of the lid had a decorative staircase effect. 
 After adjusting the final step, I inserted a face, scaled it down and moved it up, leaving me ready to create the lid handle. I extruded the handle in a similar way to the slope leading up to it. I inserted faces, scaled and moved them to the correct position creating a sloping concave effect with the bulging top that the reference imagery showed.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-kettle4.png"}
   alt={"Kettle Lid"}
   width={1200}
@@ -133,7 +128,6 @@ After adjusting the final step, I inserted a face, scaled it down and moved it u
 Using the subdivision surface modifier to interpolate the difference in the geometry, I smoothed out the rough areas, creating the look that I needed. To complete the effect, I added loop cuts at the bottom of the sharp areas of the staircase. This added geometry allowed for most of the detail in the sharp curves to remain while keeping the overall smoothed look.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={
     "/assets/images/posts/virtual-cities/proj-virtual-cities-kettle6-lid-smooth.png"
   }
@@ -147,7 +141,6 @@ Using the subdivision surface modifier to interpolate the difference in the geom
 I noticed there is a roughness in the shading when too many vertices terminate to an N-gon that is too large. To prevent this I inserted a final face and scaled it down allowing for the shading to correct itself.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-kettle5-l.png"}
   alt={"Kettle Subdiv 1"}
   width={1200}
@@ -155,7 +148,6 @@ I noticed there is a roughness in the shading when too many vertices terminate t
   format={"avif"}
 />
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-kettle5-r.png"}
   alt={"Kettle Subdiv2"}
   width={1200}
@@ -166,7 +158,6 @@ I noticed there is a roughness in the shading when too many vertices terminate t
 I scaled the lid to fit, then moved it to be in line with the body of the kettle.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-kettle7.png"}
   alt={"scaled kettle lid"}
   width={1200}
@@ -183,7 +174,6 @@ As previously shown I used X-ray mode to allow me to manipulate vertices I could
 To finish the design, I applied a subdivision surface modifier to the handle and the connecting pieces, to smooth them out and match the kettle body.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-kettle8.png"}
   alt={"Applied subdiv to the handle and connectors"}
   width={1200}
@@ -206,7 +196,6 @@ To explain the concept of UV unwrapping, I compare it to making cubes out of pap
   </i>
 </p>
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/uv-unwrap-demo.png"}
   alt={"UV unwrap demo - Wikipedia"}
   width={1200}
@@ -219,7 +208,6 @@ The bulk of work in this project is not well demonstrated when looking at the wh
 To finish the kettle, I needed to work on the scen lighting. For this particular model it was quite simple. I added a single point light at an angle a few degrees off from the camera's position. This provides some harsh shadows and fills in for the HDRI's deficiencies. I rendered this scene using the Cycles renderer in Blender. I could then see that the kettle needed a subtle drop shadow, as when I looked at the image on my website, it was definitely missing something. It did not have the punchy effect that I wanted. Adding the drop shadow solved this problem, as it allowed the kettle to stand out from the background on the page.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={
     "/assets/images/posts/virtual-cities/proj-virtual-cities-kettle-rendered.png"
   }
@@ -236,7 +224,6 @@ To finish the kettle, I needed to work on the scen lighting. For this particular
 The main body started by slicing the top off a sphere in edit mode. Using proportional editing, I moulded the rest of the geometry to match my physical reference. I extruded a flat base, then using extrusion and rotation, I created the lip of the saucepan. Finally I added the subdivision surface modifier to smooth out the surface.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-pot1.png"}
   alt={""}
   width={1200}
@@ -245,7 +232,6 @@ The main body started by slicing the top off a sphere in edit mode. Using propor
 />
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-pot2.png"}
   alt={""}
   width={1200}
@@ -254,7 +240,6 @@ The main body started by slicing the top off a sphere in edit mode. Using propor
 />
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-pot3.png"}
   alt={""}
   width={1200}
@@ -267,7 +252,6 @@ The main body started by slicing the top off a sphere in edit mode. Using propor
 The handle was surprisingly complicated. I started with a cylinder, scaled and rotated it into position. Initially my cylinder had too many sides so I deleted it and remade with six sides. As my pan was currently upside down I needed to rotate it and then in edit mode I added loop cuts along the handle giving me geometry to work with. I then had to ensure the handle was not sticking through the pan.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/proj-virtual-cities-pot4.png"}
   alt={""}
   width={1200}
@@ -281,7 +265,6 @@ To match my reference material, the handle required a hole in the end to hang it
 _Handle using Boolean modifier_
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/pot-handle-example1.png"}
   alt={""}
   width={1200}
@@ -292,7 +275,6 @@ _Handle using Boolean modifier_
 I UV unwrapped the pan, marking the seams as needed.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/pot-uv-example.png"}
   alt={""}
   width={1200}
@@ -303,7 +285,6 @@ I UV unwrapped the pan, marking the seams as needed.
 I applied a copper texture from <Link href="https://quixel.com/megascans/" text="Quixel Megascans"/> and then a global light. Later in the process I added a further light inside the pan to bring up the visual appeal of the render. The current texture was too bright, so I referred back to the kettle model to take inspiration for the texture colour. I added an <Link href="https://hdrihaven.com/" text=""HDRI /> to fill out the lighting and reflections and then a blank backdrop. Using <Link href="https://quixel.com/megascans/" text="Quixel Megascans"/> again I added a backdrop texture. From the video you can see I worked a long time on the marble background, but in the end decided that would be something to achieve when working with my partner, inserting objects into the 3D environment. I reflected that my task at this point was to complete and demonstrate the object without distracting viewers from it, and so used a black backdrop to keep the focus on the 3D model itself.
 
 <Image
-  class="sm:px-8 md:px-16 py-10 drop-shadow-lg"
   src={"/assets/images/posts/virtual-cities/pot-handle-no-hole.png"}
   alt={""}
   width={1200}
