--- a/src/content/blog/template.mdx
+++ b/src/content/blog/template.mdx
@@ -4,7 +4,7 @@ date: 2000-01-01
 author: Adam B
 # image:
 #   {
-#     src: "/assets/images/posts/hq-background.png",
+#     src: "/assets/images/headers/hq-background.png",
 #     alt: "Template background image",
 #     aspect_ratio: { x: 1, y: 1 },
 #   }
@@ -14,4 +14,4 @@ category: Personal
 ---
 
 import Link from "../../components/Link.astro";
-import { Image, Picture } from "@astrojs/image/components";
+import { Image } from "astro:assets";
