Writing update to 3.0

--- a/src/content/blog/template.mdx
+++ b/src/content/blog/template.mdx
@@ -5,8 +5,7 @@ author: Adam B
 # image:
 #   {
 #     src: "/assets/images/headers/hq-background.png",
-#     alt: "Template background image",
-#     aspect_ratio: { x: 1, y: 1 },
+#     title: "Template background image",
 #   }
 description: Here's a template for a post, it's wonderful
 draft: true
