--- a/src/content/blog/virtual-cities.mdx
+++ b/src/content/blog/virtual-cities.mdx
@@ -2,7 +2,7 @@
 title: Virtual Cities Winchester Project
 date: 2019-11-15
 author: Adam B
-image: { src: "../../assets/images/headers/cities-splash.png", alt: "Splash screen" }
+image: { src: "../../assets/images/headers/cities-splash.png", title: "Splash screen" }
 description: Year 2 Semester 1 Group Project. How can we construct a historically accurate representation of Winchester in the Georgian period?
 draft: false
 category: University
