Blog more responsive

--- a/src/content/blog/rsa-proj.mdx
+++ b/src/content/blog/rsa-proj.mdx
@@ -2,7 +2,7 @@
 title: RSA Project - Home Sweet Home
 date: 2019-05-22
 author: Adam B
-image: { src: "../../assets/images/headers/proj-rsa-coldperson.jpg", alt: "A picture of cold person" }
+image: { src: "/assets/images/headers/proj-rsa-coldperson.jpg", alt: "A picture of cold person" }
 description: How might we harness age friendly design to future-proof homes, so they are sustainable, safe and inclusive places to live and enjoy?
 draft: false
 category: University
