Optimised more images

--- a/src/content/blog/upgrading-to-3.0.mdx
+++ b/src/content/blog/upgrading-to-3.0.mdx
@@ -2,9 +2,7 @@
 title: Upgrading to Astro 3.0 because I can.
 date: 2023-08-31
 author: Adam B
-image: {
-  src: "/assets/images/headers/astro3.png"
-}
+image: "../../assets/images/headers/astro3.png"
 imageTitle: "Astro 3.0 header image, taken from Astro.build"
 description: Here's a template for a post, it's wonderful
 draft: false
