--- a/src/content/blog/first-spigot-plugin.mdx
+++ b/src/content/blog/first-spigot-plugin.mdx
@@ -3,7 +3,7 @@ title: "Journey into Spigot: Creating My First Plugin"
 date: 2022-08-13
 author: Adam B
 tags: Spigot, Minecraft, Java, IntelliJ, Plugin Development
-image: { src: "/assets/images/headers/tech-background.jpg", title: "Photo by Ales Nesetril on Unsplash" }
+image: "../../assets/images/headers/tech-background.jpg"
 description: An introspective account of my journey to learn Spigot by creating my first plugin. This post serves as a reflection and guide for those embarking on a similar path.
 draft: false
 category: Coding
