--- a/src/content/blog/template.mdx
+++ b/src/content/blog/template.mdx
@@ -2,11 +2,7 @@
 title: TITLE HERE
 date: 2000-01-01
 author: Adam B
-# image:
-#   {
-#     src: "/assets/images/headers/hq-background.png",
-#     title: "Template background image",
-#   }
+# image: "../../assets/images/headers/hq-background.png"
 description: Here's a template for a post, it's wonderful
 draft: true
 category: Personal
